# optcpp

./: README.md
optlib/: CMakeLists.txt
optlib/examples/: gd_quadratic.cpp  newton_quadratic.cpp  quadratic.cpp
optlib/include/optlib/core/: objectives.hpp  options.hpp  stepsizes.hpp  store_results.hpp  types.hpp
optlib/include/optlib/solvers/: gradient_descent.hpp  momentum.hpp  nesterov.hpp  newton.hpp
optlib/include/optlib/stepsizes/: backtracking.hpp  constant.hpp
